--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -7,5 +7,42 @@
   <img src=".images/HolidayOnIce.jpeg" alt="An image of skaters performing in a Holiday On Ice Show" title="skaters in Ice Show" width="1000" height="500" />
   <body>
     Hello
+    <table>
+      <style>
+    table, th, td {
+      border: 1px solid black;
+    }
+</style>
+   <tr>
+      <th></th>
+      <th scope="col">Wednesday</th>
+      <th scope="col">Thursday</th>
+      <th scope="col">Friday</th>
+      <th scope="col">Saturday</th>
+      <th scope="col">Sunday</th>
+   </tr>
+   <tr>
+      <th scope="row">Show Times</th>
+      <td>6:30APM</td>
+      <td>6:30PM</td>
+      <td>8:30PM</td>
+      <td>8:30PM</td>
+      <td>8:30PM</td>
+   </tr>
+   <tr>
+      <th scope="row">Gerneral Addmission</th>
+      <td>40</td>
+      <td>35</td>
+      <td>41</td>
+   </tr>
+   <tr>
+      <th scope="row">Preorder Available</th>
+      <td>No</td>
+      <td>No/td>
+      <td>>Yes</td>
+      <td>>Yes</td>
+      <td>>Yes</td>
+   </tr>
+</table>
   </body>
 </html>
