--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -31,17 +31,19 @@
    </tr>
    <tr>
       <th scope="row">Gerneral Addmission</th>
-      <td>40</td>
-      <td>35</td>
-      <td>41</td>
+      <td>$25.00</td>
+      <td>$25.00</td>
+      <td>$25.00</td>
+      <td>$25.00</td>
+      <td>$25.00</td>
    </tr>
    <tr>
       <th scope="row">Preorder Available</th>
       <td>No</td>
-      <td>No/td>
-      <td>>Yes</td>
-      <td>>Yes</td>
-      <td>>Yes</td>
+      <td>No</td>
+      <td>Yes</td>
+      <td>Yes</td>
+      <td>Yes</td>
    </tr>
 </table>
   </body>
