--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -23,7 +23,7 @@
    </tr>
    <tr>
       <th scope="row">Show Times</th>
-      <td>6:30APM</td>
+      <td>6:30PM</td>
       <td>6:30PM</td>
       <td>8:30PM</td>
       <td>8:30PM</td>
@@ -47,4 +47,16 @@
    </tr>
 </table>
   </body>
+<p>  <address Holiday on Ice Productions B.V.
+Marktplein 108, 4th floor, 2132 DD Hoofddorp, The Netherlands
+P.O. Box 3096, 2130 KB Hoofddorp, The Netherlands accesskey
+</p>
+
+  <p>Have a question?</p>
+
+<p><a href="holidayonice@ticketonline.com">E-mail Holiday On Ice!</a></p>
+
+<p>or</p>
+
+<p><a href="holidayonice@ticketonline.com">holidayonice@ticketonline.com</a></p>
 </html>
