--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -47,10 +47,9 @@
    </tr>
 </table>
   </body>
-<p>  <address Holiday on Ice Productions B.V.
+ <address Holiday on Ice Productions B.V.
 Marktplein 108, 4th floor, 2132 DD Hoofddorp, The Netherlands
 P.O. Box 3096, 2130 KB Hoofddorp, The Netherlands accesskey
-</p>
 
   <p>Have a question?</p>
 
