--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -60,4 +60,15 @@ P.O. Box 3096, 2130 KB Hoofddorp, The Netherlands accesskey
 <p>or</p>
 
 <p><a href="holidayonice@ticketonline.com">holidayonice@ticketonline.com</a></p>
+
+
+<form action="http://www.example.com/login.php" method="post" id="sign-in" class="basic-forms">
+    <input type="text" name="username" id="username_input" placeholder="ab123456"/>
+</form>
+
+<p>
+  Comments or Concerns:
+  <textarea name="comments" id="test-textarea">Enter up to 500 characters...</textarea>
+</p>
+
 </html>
