--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -47,11 +47,17 @@
    </tr>
 </table>
   </body>
- <address Holiday on Ice Productions B.V.
+
+
+<h1>Contact Us</h1>
+
+<p>
+<address Holiday on Ice Productions B.V.
 Marktplein 108, 4th floor, 2132 DD Hoofddorp, The Netherlands
 P.O. Box 3096, 2130 KB Hoofddorp, The Netherlands accesskey
+</p>
 
-<p>+03 871 211 5600 </p>
+<p>Phone: +03 871 211 5600 </p>
 
   <p>Have a question?</p>
 
