--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Holiday On Ice Photo Gallery</title>
   </head>
+  <h1 WELCOME TO HOLIDAY ON ICE</h1>
+
   <img src=".images/HolidayOnIce.jpeg" alt="An image of skaters performing in a Holiday On Ice Show" title="skaters in Ice Show" width="1000" height="500" />
   <body>
     Hello
@@ -51,13 +53,15 @@
 
 <h1>Contact Us</h1>
 
-<p>
-<address Holiday on Ice Productions B.V.
+<address>
+  <a href="Holiday on Ice Productions B.V.
 Marktplein 108, 4th floor, 2132 DD Hoofddorp, The Netherlands
-P.O. Box 3096, 2130 KB Hoofddorp, The Netherlands accesskey
-</p>
+P.O. Box 3096, 2130 KB Hoofddorp, The Netherlands">Holiday on Ice Productions B.V.
+Marktplein 108, 4th floor, 2132 DD Hoofddorp, The Netherlands
+P.O. Box 3096, 2130 KB Hoofddorp, The Netherlands</a><br>
+  <a href="tel:++03 871 211 5600">+03 871 211 5600</a>
+</address>
 
-<p>Phone: +03 871 211 5600 </p>
 
   <p>Have a question?</p>
 
