--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -81,4 +81,10 @@ P.O. Box 3096, 2130 KB Hoofddorp, The Netherlands</a><br>
   <textarea name="comments" id="test-textarea">Enter up to 500 characters...</textarea>
 </p>
 
+<form action="https://www.example.com/subscribe.php" method="post">
+   <p>Subscribe to our e-mail list:</p>
+     <input type="text" name="email" />
+     <input type="submit" name="subscribe" value="Subscribe" />
+</form>
+
 </html>
