--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -75,7 +75,7 @@ P.O. Box 3096, 2130 KB Hoofddorp, The Netherlands</a><br>
 
 
 <form action="http://www.example.com/login.php" method="post" id="sign-in" class="basic-forms">
-    <input type="text" name="username" id="username_input" placeholder="ab123456"/>
+    <input type="text" name="username" id="username_input" placeholder="ab123456"/> <input type="search" autofocus >
 </form>
 
 <p>
