--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -13,7 +13,11 @@
   <p><h1 WELCOME TO HOLIDAY ON ICE </h1></p>
 
   <body>
-
+    <style>
+        table, th, td {
+          border: 1px solid black;
+        }
+    </style>
 <table>
     <tr>
       <th></th>
