--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -3,7 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+
   </head>
+  <style>
+  body {
+  background-color: powderblue;
+  text-align: center;
+}
+.container {
+  background-color: white;
+  width: 600px;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid black;
+}
+.lyrics p, pre {
+  background-color: grey;
+  color: white;
+  font-size: small;
+  font-family: Arial;
+}
+
+  </style>
+  
+}
   <body>
     Something different
   </body>
