--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -25,9 +25,14 @@
 }
 
   </style>
-  
-}
+
   <body>
     Something different
+    <div id="art" class="container"></div>
+    <div id="audio" class="container"></div>
+    <div id="vidoe" class="container"></div>
+    <div id="lyrics" class="continer"></div>
+    <div id="copyright" class="continer"></div>
+
   </body>
 </html>
