--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -28,10 +28,10 @@
 
   <body>
     Something different
-    <div id="art" class="container"></div>
-    <div id="audio" class="container"></div>
-    <div id="vidoe" class="container"></div>
-    <div id="lyrics" class="continer"></div>
+<h1>Art</h1>    <div id="art" class="container"></div>
+<h2>Audio</h2>    <div id="audio" class="container"></div>
+<h3>Video</h3>    <div id="vidoe" class="container"></div>
+<h4>Lyrics</h4>    <div id="lyrics" second class="continer"></div>
     <div id="copyright" class="continer"></div>
 
   </body>
