--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -28,8 +28,7 @@
   </style>
 
   <body>
-    Something different
-    <title>Rihana Higher</title>
+  Rihanna Higher
 <h1>Art</h1>    <div id="art" class="container"></div>
 <h2>Audio</h2>    <div id="audio" class="container"></div>
 <h3>Video</h3>    <div id="vidoe" class="container"></div>
