--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -32,6 +32,7 @@
   <title>RIHANNA Higher</title>
 </head>
 <h1>Art</h1>    <div id="art" class="container"></div>
+<iframe src="https://i.pinimg.com/originals/44/e7/12/44e712accb6fca2c0253d6e7c3109970.jpg" width="319" height="319"></iframe>
 <h2>Audio</h2>    <div id="audio" class="container"></div>
 <h3>Video</h3>    <div id="vidoe" class="container"></div>
 <h4>Lyrics</h4>    <div id="lyrics" second class="continer"></div>
