--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -33,13 +33,33 @@
 </head>
 <h1>Art</h1>    <div id="art" class="container"></div>
 <iframe src="https://i.pinimg.com/originals/44/e7/12/44e712accb6fca2c0253d6e7c3109970.jpg" width="319px" height="319px"></iframe>
+
 <h2>Audio</h2>    <div id="audio" class="container"></div>
 <audio src="<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/255769410&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/rihanna" title="Rihanna" target="_blank" style="color: #cccccc; text-decoration: none;">Rihanna</a> · <a href="https://soundcloud.com/rihanna/higher-1" title="Higher" target="_blank" style="color: #cccccc; text-decoration: none;">Higher</a></div>">
 
 </audio>
+
 <h3>Video</h3>    <div id="vidoe" class="container"></div>
+<video src="<iframe width="560" height="315" src="https://www.youtube.com/embed/C-U1XD-sRac" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" autoplay poster="posterimage.jpg">
+
+</video>
 <h4>Lyrics</h4>    <div id="lyrics" second class="continer"></div>
     <div id="copyright" class="continer"></div>
-
+<p>This whiskey got me feelin' pretty
+So pardon if I'm impolite
+I just really need your ass with me
+I'm sorry 'bout the other night
+And I know I could be more creative
+And come up with poetic lines
+But I'm turnt up upstairs and I love you
+Is the only thing that's in my mind
+You take me higher, higher than I've ever been, babe
+Just come over, let's pour a drink, babe
+I hope I ain't calling you too late, too late
+You light my fire
+Let's stay up late and smoke a J
+I wanna go back to the old way
+But I'm drunk instead, with a full ash tray
+With a little bit too much to say</p>
   </body>
 </html>
