--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -43,15 +43,14 @@
 <h3>Video</h3>    <div id="vidoe" class="container"></div>
 
 
-  <div id="video" class="container"></div>
-<video src="<iframe width="560" height="315" src="https://www.youtube.com/embed/C-U1XD-sRac" preload controls frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" autoplay poster="posterimage.jpg"></video>
-<h4>Lyrics</h4>    <div id="lyrics" second class="continer"></div>
-    <div id="copyright" class="continer"></div>
+  <div id="video" class="container">
+<video src="<iframe width="560" height="315" src="https://www.youtube.com/embed/C-U1XD-sRac" preload controls frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" autoplay poster="posterimage.jpg"></video></div>
 
 
   ,<div class="container"></div>
 <p>This whiskey got me feelin' pretty
 So pardon if I'm impolite</p>
+
 
 <p>I just really need your ass with me
 I'm sorry 'bout the other night</p>
