--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -2,8 +2,6 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-
-
   </head>
   <title>Rihana Higher</title>
   <style>
@@ -42,11 +40,11 @@
 
 <h3>Video</h3>    <div id="vidoe" class="container"></div>
 
+<h1>Video</h1>
+  <div id="video" class="container"></video></div>
+<video src="<iframe width="560" height="315" src="https://www.youtube.com/embed/C-U1XD-sRac" preload controls frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" autoplay poster="posterimage.jpg">
 
-  <div id="video" class="container">
-<video src="<iframe width="560" height="315" src="https://www.youtube.com/embed/C-U1XD-sRac" preload controls frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" autoplay poster="posterimage.jpg"></video></div>
-
-
+<h1>lyrics</h1>
   ,<div class="container"></div>
 <p>This whiskey got me feelin' pretty
 So pardon if I'm impolite</p>
@@ -73,6 +71,10 @@ I wanna go back to the old way</p>
 <p>But I'm drunk instead, with a full ash tray
 With a little bit too much to say</p>
 
-
+<h1>Copyright</h1>
+<div class="container">
+  <p>I do not own this material. The material was used for a school project</p>
+  
+</div>
   </body>
 </html>
