--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -49,7 +49,6 @@
 <p>This whiskey got me feelin' pretty
 So pardon if I'm impolite</p>
 
-
 <p>I just really need your ass with me
 I'm sorry 'bout the other night</p>
 
@@ -72,10 +71,11 @@ I wanna go back to the old way</p>
 With a little bit too much to say</p>
 
 
-  </body>
+
   <h1>Copyright</h1>
   <div class="container">
-    <p>I do not own this material. The material was used for a school project</p>
+    <p>I do not own this material. The material was used for a school project</p></div>
 
-  </div>
+<iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2728.2407081408674!2d-113.98782208522734!3d46.858635247339606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dcc34d0fd7c51%3A0x4e8a3ae32f738312!2sSkaggs%20Bldg%2C%2032%20Campus%20Dr%2C%20Missoula%2C%20MT%2059812!5e0!3m2!1sen!2sus!4v1602261948142!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>" width="600" height="450"></iframe>
+</body>
 </html>
