--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -44,6 +44,7 @@
   <div id="video" class="container"></video></div>
 <video src="<iframe width="560" height="315" src="https://www.youtube.com/embed/C-U1XD-sRac" preload controls frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" autoplay poster="posterimage.jpg">
 
+<body>
 <h4>lyrics</h4>
   <div class="container"></div>
 <p>This whiskey got me feelin' pretty
@@ -68,13 +69,12 @@ You light my fire</p>
 I wanna go back to the old way</p>
 
 <p>But I'm drunk instead, with a full ash tray
-With a little bit too much to say</p>
+With a little bit too much to say</p></body>
 
-
-
-<p><h5>Copyright</h5>
-    <div class="container">
-    <p>I do not own this material. The material was used for a school project</p></div></p>
+<body>
+  <p><h5>Copyright</h5>
+      <div class="container">
+        <p>I do not own this material. The material was used for a school project</p></div></p>
 
 <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2728.2407081408674!2d-113.98782208522734!3d46.858635247339606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dcc34d0fd7c51%3A0x4e8a3ae32f738312!2sSkaggs%20Bldg%2C%2032%20Campus%20Dr%2C%20Missoula%2C%20MT%2059812!5e0!3m2!1sen!2sus!4v1602261948142!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>" width="600" height="450"></iframe>
 </body>
