--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -25,8 +25,8 @@
 
   </style>
 
-  <body>
 <head>
+  <body>
   <title>RIHANNA Higher</title>
 
 </head>
@@ -40,11 +40,10 @@
 
 <h3>Video</h3>    <div id="vidoe" class="container"></div>
 
-<h1>Video</h1>
+<h3>Video</h3>
   <div id="video" class="container"></video></div>
 <video src="<iframe width="560" height="315" src="https://www.youtube.com/embed/C-U1XD-sRac" preload controls frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" autoplay poster="posterimage.jpg">
 
-<body>
 <h4>lyrics</h4>
   <div class="container"></div>
 <p>This whiskey got me feelin' pretty
@@ -69,10 +68,9 @@ You light my fire</p>
 I wanna go back to the old way</p>
 
 <p>But I'm drunk instead, with a full ash tray
-With a little bit too much to say</p></body>
+With a little bit too much to say</p>
 
-<body>
-  <p><h5>Copyright</h5>
+<h5>Copyright</h5>
       <div class="container">
         <p>I do not own this material. The material was used for a school project</p></div></p>
 
