--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -43,11 +43,12 @@
 </div>
 
 <h3>Video</h3>
-  <div id="video" class="container"></video></div>
+  <div id="video" class="container"></video>
 <video src="<iframe width="560" height="315" src="https://www.youtube.com/embed/C-U1XD-sRac" preload controls frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" autoplay poster="posterimage.jpg">
+</div>
 
 <h4>lyrics</h4>
-  <div class="container"></div>
+  <div class="container">
 <p>This whiskey got me feelin' pretty
 So pardon if I'm impolite</p>
 
@@ -71,6 +72,7 @@ I wanna go back to the old way</p>
 
 <p>But I'm drunk instead, with a full ash tray
 With a little bit too much to say</p>
+</div>
 
 <h5>Copyright</h5>
       <div class="container">
