--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -27,15 +27,13 @@
 
 <head>
   <body>
-    <div class="container">
-  <title>RIHANNA Higher</title>
-</div>
 
 <div class="container">
   <h1>RIHANNA HIGHER</h1>
   </div>
 
 <div id="art" claass="container"
+  <h1>Art</h1>
   <iframe src="https://i.pinimg.com/originals/44/e7/12/44e712accb6fca2c0253d6e7c3109970.jpg" width="319px" height="319px"></iframe>
 </div>
 
@@ -47,7 +45,7 @@
 
 <div id="video" class="container">
   <h3>Video</h3>
-    <video src="<iframe width="460" height="315" src="https://www.youtube.com/embed/C-U1XD-sRac" preload controls frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" autoplay poster="posterimage.jpg">
+    <video src="<iframe width="460" height="315" src="https://www.youtube.com/embed/C-U1XD-sRac" preload controls frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" autoplay poster="posterimage.jpg width="460" heigh="315">
 </div>
 
 <div class="container">
