--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -40,10 +40,12 @@
     <audio src="<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/255769410&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/rihanna" title="Rihanna" target="_blank" style="color: #cccccc; text-decoration: none;">Rihanna</a> · <a href="https://soundcloud.com/rihanna/higher-1" title="Higher" target="_blank" style="color: #cccccc; text-decoration: none;">Higher</a></div>"
 </div>
 
+
+
 <div id="video" class="container">
   <h3>Video</h3>
-    <video src="<iframe width="460" height="315" src="https://www.youtube.com/embed/C-U1XD-sRac" preload controls frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" autoplay poster="posterimage.jpg width="460" heigh="315">
-</div>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/C-U1XD-sRac" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</d>
 
 <div class="container">
   <h4>Lyrics</h4>
