--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -50,29 +50,29 @@
 <div class="container">
   <h4>Lyrics</h4>
 
-<p>This whiskey got me feelin' pretty
-So pardon if I'm impolite</p>
+<p>This whiskey got me feelin' pretty</p>
+<p>So pardon if I'm impolite</p>
 
-<p>I just really need your ass with me
-I'm sorry 'bout the other night</p>
+<p>I just really need your ass with me</p>
+<p>I'm sorry 'bout the other night</p>
 
-<p>And I know I could be more creative
-And come up with poetic lines</p>
+<p>And I know I could be more creative</p>
+<p>And come up with poetic lines</p>
 
-<p>But I'm turnt up upstairs and I love you
-Is the only thing that's in my mind</p>
+<p>But I'm turnt up upstairs and I love you</p>
+<p>Is the only thing that's in my mind</p>
 
-<p>You take me higher, higher than I've ever been, babe
-Just come over, let's pour a drink, babe</p>
+<p>You take me higher, higher than I've ever been, babe</p>
+<p>Just come over, let's pour a drink, babe</p>
 
-<p>I hope I ain't calling you too late, too late
-You light my fire</p>
+<p>I hope I ain't calling you too late, too late</p>
+<p>You light my fire</p>
 
-<p>Let's stay up late and smoke a J
-I wanna go back to the old way</p>
+<p>Let's stay up late and smoke a J</p>
+<p>I wanna go back to the old way</p>
 
-<p>But I'm drunk instead, with a full ash tray
-With a little bit too much to say</p>
+<p>But I'm drunk instead, with a full ash tray<p>
+<p>With a little bit too much to say</p>
 </div>
 
 <div class="container">
