--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -2,9 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="A basic website for Rihanna's song Higher">
+    <meta name="author" content="Cari Maus">
+    <meta name="keywords" content="MOOC, Web Development, Web Design, HTML, CSS, Montana">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rihana Higher</title>
   </head>
-  <title>Rihana Higher</title>
-  <style>
+    <style>
   body {
   background-color: powderblue;
   text-align: center;
@@ -31,8 +35,8 @@
   <h1>RIHANNA HIGHER</h1>
   </div>
 
-<div id="art" claass="container"
-  <iframe src="https://i.pinimg.com/originals/44/e7/12/44e712accb6fca2c0253d6e7c3109970.jpg" width="319px" height="319px"></iframe>
+<div id="art" class="container"
+  image src="https://i.pinimg.com/originals/44/e7/12/44e712accb6fca2c0253d6e7c3109970.jpg" width="319px" height="319px">
 </div>
 
 <div class="audio" class="container">
