--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -36,7 +36,7 @@
   </div>
 
 <div id="art" class="container"
-  image src="https://i.pinimg.com/originals/44/e7/12/44e712accb6fca2c0253d6e7c3109970.jpg" width="319px" height="319px">
+  <img> src="https://i.pinimg.com/originals/44/e7/12/44e712accb6fca2c0253d6e7c3109970.jpg" width="319px" height="319px"></img>
 </div>
 
 <div class="audio" class="container">
