--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -39,6 +39,8 @@
   <iframe> src="https://i.pinimg.com/originals/44/e7/12/44e712accb6fca2c0253d6e7c3109970.jpg" width="319px" height="319px"></ifram>
 </div>
 
+<a title="Sabinbik22 / CC BY-SA (https://creativecommons.org/licenses/by-sa/4.0)" href="https://commons.wikimedia.org/wiki/File:RIHANNA_-_ANTI_WORLD_TOUR_Logo.png"><img width="512" alt="RIHANNA - ANTI WORLD TOUR Logo" src="https://upload.wikimedia.org/wikipedia/commons/8/8a/RIHANNA_-_ANTI_WORLD_TOUR_Logo.png"></a>
+
 <div class="audio" class="container">
   <h2>Audio</h2>
     <audio src="<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/255769410&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/rihanna" title="Rihanna" target="_blank" style="color: #cccccc; text-decoration: none;">Rihanna</a> · <a href="https://soundcloud.com/rihanna/higher-1" title="Higher" target="_blank" style="color: #cccccc; text-decoration: none;">Higher</a></div>"
