--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -36,10 +36,9 @@
   </div>
 
 <div id="art" class="container"
-  <iframe> src="https://i.pinimg.com/originals/44/e7/12/44e712accb6fca2c0253d6e7c3109970.jpg" width="319px" height="319px"></ifram>
+<img> <a title="Sabinbik22 / CC BY-SA (https://creativecommons.org/licenses/by-sa/4.0)" href="https://commons.wikimedia.org/wiki/File:RIHANNA_-_ANTI_WORLD_TOUR_Logo.png"><img width="512" alt="RIHANNA - ANTI WORLD TOUR Logo" src="https://upload.wikimedia.org/wikipedia/commons/8/8a/RIHANNA_-_ANTI_WORLD_TOUR_Logo.png"></a>
 </div>
 
-<a title="Sabinbik22 / CC BY-SA (https://creativecommons.org/licenses/by-sa/4.0)" href="https://commons.wikimedia.org/wiki/File:RIHANNA_-_ANTI_WORLD_TOUR_Logo.png"><img width="512" alt="RIHANNA - ANTI WORLD TOUR Logo" src="https://upload.wikimedia.org/wikipedia/commons/8/8a/RIHANNA_-_ANTI_WORLD_TOUR_Logo.png"></a>
 
 <div class="audio" class="container">
   <h2>Audio</h2>
