--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -42,8 +42,7 @@
 
 <div class="audio" class="container">
   <h2>Audio</h2>
-  <iframe <audio> width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/255769410&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/rihanna" title="Rihanna" target="_blank" style="color: #cccccc; text-decoration: none;">Rihanna</a> · <a href="https://soundcloud.com/rihanna/higher-1" title="Higher" target="_blank" style="color: #cccccc; text-decoration: none;">Higher</a></div>
-
+ <audio> <iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/higher/1440924615?i=1079656520"></iframe>
 </div>
 
 <div id="video" class="container">
