--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -42,7 +42,7 @@
 
 <div class="audio" class="container">
   <h2>Audio</h2>
-<audio  <iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/higher/1440924615?i=1079656520"></iframe></audio>
+<audio  src="https://embed.music.apple.com/us/album/higher/1440924615?i=1079656520"></audio>
 </div>
 
 <div id="video" class="container">
@@ -81,9 +81,9 @@
 <div class="container">
 <h5>Copyright</h5>
       <p>I do not own this material. The material was used for a school project</p>
-    <video poster type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"' </video>
-    <video poster type='video/webm; codecs="vp8.0, vorbis"'</video>
-    <img> </img>
+    <video poster type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"' height="800" width="450" </video>
+    <video poster type='video/webm; codecs="vp8.0, vorbis"' height="" width=""</video>
+    <img>
     </div>
 
 <div class="container">
