--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -7,7 +7,6 @@
     <meta name="keywords" content="MOOC, Web Development, Web Design, HTML, CSS, Montana">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rihana Higher</title>
-  </head>
     <style>
   body {
   background-color: powderblue;
@@ -28,27 +27,27 @@
 }
 
   </style>
-
+  </head>
 <body>
 
 <div id="title" class="container">
   <h1>RIHANNA HIGHER</h1>
   </div>
 
-<div id="art" class="container"
-<img> <a title="Sabinbik22 / CC BY-SA (https://creativecommons.org/licenses/by-sa/4.0)" href="https://commons.wikimedia.org/wiki/File:RIHANNA_-_ANTI_WORLD_TOUR_Logo.png"><img width="512" alt="RIHANNA - ANTI WORLD TOUR Logo" src="https://upload.wikimedia.org/wikipedia/commons/8/8a/RIHANNA_-_ANTI_WORLD_TOUR_Logo.png"></a>
+<div id="art" class="container">
+<img  width="512" alt="RIHANNA - ANTI WORLD TOUR Logo" src="https://upload.wikimedia.org/wikipedia/commons/8/8a/RIHANNA_-_ANTI_WORLD_TOUR_Logo.png">
 </div>
 
 
-<div class="audio" class="container">
+<div class="audio container">
   <h2>Audio</h2>
-<audio  src="https://embed.music.apple.com/us/album/higher/1440924615?i=1079656520"></audio>
+<audio  src="./Media/Higher.mp3" controls></audio>
 </div>
 
 <div id="video" class="container">
   <h3>Video</h3>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/C-U1XD-sRac" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-</d>
+</div>
 
 <div class="container">
   <h4>Lyrics</h4>
@@ -81,9 +80,9 @@
 <div class="container">
 <h5>Copyright</h5>
       <p>I do not own this material. The material was used for a school project</p>
-    <video poster type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"' height="800" width="450" </video>
-    <video poster type='video/webm; codecs="vp8.0, vorbis"' height="" width=""</video>
-    <img>
+    <video src="./Media/mart-logo-animated.mp4" controls poster="./Media/mart-logo-poster.jpg" type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"' height="450" width="450" </video>
+    <video src="./Media/mart-logo-animated.webm" controls poster="./Media/mart-logo-poster.jpg" type='video/webm; codecs="vp8.0, vorbis"' height="450" width="450"</video>
+
     </div>
 
 <div class="container">
