--- a/assignment-09/about.html
+++ b/assignment-09/about.html
@@ -5,3 +5,56 @@
          <meta name="author" content="Montana Media Arts">
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <title>About Us</title>
+         <style>
+             ol li {
+                 font-size: 18px;
+                 display:inline;
+             }
+             li {
+                 font-size:24px;
+             }
+             body {
+                 font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+             }
+         </style>
+         </head>
+         <body>
+         <nav>
+             <a href="index.html">Home</a>&vert;<a href="about.html">About Us</a>&vert;<a href="contact.html">Contact Us</a>
+         </nav>
+         <a href="index.html">Home</a>&vert;<a href="about.html">About Us</a>&vert;<a href="contact.html">Contact Us</a>
+     </nav>
+
+     <h1>Scrambled Eggs Instructable</h1>
+     <ul>
+       <li>
+         <strong>Why did you choose this project?</strong>
+         <ol>
+             <li>
+                 I have always loved scrambled eggs. I finally learned how to make them perfectly and thought I would share.
+             </li>
+         </ol>
+     </li>
+     <li>
+         <strong>What does it mean for you?</strong>
+         <ol>
+             <li>
+                 Eggs are a staple in my meals and are a cheap, quick, and easy go to for a busy student.
+             </li>
+         </ol>
+
+     </li>
+     <li>
+         <strong>Where can I learn more?</strong>
+
+         <ol>
+             <li>
+                 <a href="https://www.healthline.com/nutrition/10-proven-health-benefits-of-eggs#TOC_TITLE_HDR_3" target="_new"><em>Top 10 Health Benefits of Eating Eggs</em></a>
+             </li>
+         </ol>
+
+     </li>
+ </ul>
+
+</body>
+</html>
