--- a/assignment-09/index.html
+++ b/assignment-09/index.html
@@ -51,7 +51,7 @@
          <div><h2>Step 3 - Cooking Eggs</h2></div>
          <div style="margin:auto; padding:10px">
              <span style="padding:50px">
-                 <p>Pour whisked eggs into frying pan. Scramble eggs every ten seconds. If pan seems too hot, turn down heat. Low heat is best to not burn eggs. Scrambling often. </p>
+                 <p>Pour whisked eggs into frying pan. Scramble eggs every ten seconds, cover inbetween every scramble with lid. If pan seems too hot, turn down heat. Low heat is best to not burn eggs. Scrambling often. Add cheese before eggs become firm. </p>
                  <img src="images/step3.jpg" alt="Scrambling Eggs" title="Scrambling Eggs" /></span>
          </div>
 
