--- a/assignment-09/about.html
+++ b/assignment-09/about.html
@@ -6,7 +6,7 @@
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <title>About Us</title>
          <style>
-             ol li {
+          ol li {
                  font-size: 18px;
                  display:inline;
              }
@@ -14,7 +14,7 @@
                  font-size:24px;
              }
              body {
-                 font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+                 font-family: 'Arial', 'Verdana', 'Tahoma';
              }
          </style>
          </head>
@@ -32,10 +32,11 @@
              <li>
                <br>
                  I have always loved scrambled eggs. I finally learned how to make them perfectly and thought I would share.
+
              </li>
          </ol>
      </li>
-
+<br>
      <li>
          <strong>What does it mean for you?</strong>
          <ol>
@@ -46,7 +47,8 @@
          </ol>
 
   </li>
-     <li>    
+  <br>
+     <li>
        <strong>Where can I learn more?</strong>
 
          <ol>
