--- a/assignment-09/index.html
+++ b/assignment-09/index.html
@@ -11,7 +11,8 @@
                  border: 1px grey solid;
              }
              body {
-                 font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+               font-family: 'Arial', 'Verdana', 'Tahoma';
              }
          </style>
      </head>
@@ -20,7 +21,7 @@
              <a href="index.html">Home</a>&vert;<a href="about.html">About Us</a>&vert;<a href="contact.html">Contact Us</a>
          </nav>
          <p>&nbsp;</p>
-         <h1>Items You Will Need</h1>
+        <h1>Items You Will Need</h1>
          <ul>
               <li>Cooking spray</li>
               <li>A frying pan</li>
@@ -43,7 +44,7 @@
          <div><h2>Step 2 - Pan and Stove preparation</h2></div>
          <div style="margin:auto; padding:10px">
              <span style="padding:50px;">
-                 <p>Spray frying pan with cooking spray.Turn on stove top burner to medium/low. Place greased pan on burner. Add butter to frying pan, wait until fully metlted to add eggs.</p>
+                 <p>Spray frying pan with cooking spray. Turn on stove top burner to medium/low. Place greased pan on burner. Add butter to frying pan, wait until fully metlted to add eggs.</p>
                  <img src="images/step2.jpg" alt="Melted Butter" title="Melted Butter" /></span>
 
          </div>
