--- a/assignment-09/contact.html
+++ b/assignment-09/contact.html
@@ -7,19 +7,19 @@
          <title>Contact Us</title>
          <style>
              div {
-                 background-color: lightyellow solid;
-                 border: 1px black solid;
+                 background-color: yellow solid;
+                 border: 1px lightgray solid;
              }
              body {
                  font-family: 'Arial', 'Verdana', 'Tahoma';
              }
-           }
+
    h1 {
       color: darkgray;
       text-align: center;
    }
    h2 {
-      color: lightgray;
+      color: darkgray;
       text-align: center;
    }
    p, ul {
@@ -31,7 +31,8 @@
          <nav>
              <a href="index.html">Home</a>&vert;<a href="about.html">About Us</a>&vert;<a href="contact.html">Contact Us</a>
          </nav>
-         <h1>Scrambled Eggs Instructable</h1>
+         <h1>Scrambled Egg Instructable</h1>
+         <h3>Contact Us</h3>
          <form>
              <table>
                  <tr>
