--- a/assignment-09/about.html
+++ b/assignment-09/about.html
@@ -6,13 +6,7 @@
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <title>About Us</title>
          <style>
-            div  {
-              background-color: lightyellow;
-              border: 1px blue solid;
-                }
-
-
-          ol li {
+              ol li {
 
                  font-size: 18px;
                  display:inline;
@@ -22,6 +16,7 @@
              }
              body {
                  font-family: 'Arial', 'Verdana', 'Tahoma';
+                 background-color:powderblue;
              }
 
          </style>
