--- a/assignment-09/index.html
+++ b/assignment-09/index.html
@@ -25,7 +25,7 @@
         <h1>Items You Will Need</h1>
          <ul>
               <li>Cooking spray</li>
-              <li>A frying pan</li>
+              <li>Small frying pan</li>
               <li>Spatula</li>
               <li>1-3 eggs</li>
               <li>1-2 Tble butter</li>
