--- a/assignment-09/index.html
+++ b/assignment-09/index.html
@@ -35,34 +35,33 @@
          </ul>
 
          <h1>Srambled Eggs Instructable</h1>
-         <img src="images/eggscrambled.jpg" alt="Whisked Eggs" title="Whisked Eggs" /></span>
+         <img src="images/eggscrambled.jpg" alt="Whisked Eggs" title="Whisked Eggs" width="672" height="504"/></span>
 
          <div><h2>Step 1 - Egg Preparation</h2></div>
          <div style="margin:auto; padding:10px">
              <span style="padding:50px;">
                  <p>Crack 1-3 eggs into a bowl. Add milk. Whisk eggs and milk in bowl with fork until frothy.</p>
-                <img src="images/eggsandmilk.jpg" alt="Whisked Eggs" title="Whisked Eggs" /></span>
+                <img src="images/eggsandmilk.jpg" alt="Whisked Eggs" title="Whisked Eggs" width="672" height="504"/></span>
          </div>
 
          <div><h2>Step 2 - Pan and Stove preparation</h2></div>
          <div style="margin:auto; padding:10px">
              <span style="padding:50px;">
                  <p>Spray frying pan with cooking spray. Turn on stove top burner to medium/low. Place greased pan on burner. Add butter to frying pan, wait until fully metlted to add eggs.</p>
-                 <img src="images/butterinpan.jpg" alt="Melted Butter" title="Melted Butter" /></span>
+                 <img src="images/butterinpan.jpg" alt="Melted Butter" title="Melted Butter" width="672" height="504"/></span>
 
          </div>
 
          <div><h2>Step 3 - Cooking Eggs</h2></div>
          <div style="margin:auto; padding:10px">
              <span style="padding:50px">
-                 <p>Pour whisked eggs into frying pan. Scramble eggs every 3 seconds. If pan seems too hot, turn down heat. Low heat is best to not burn eggs. Scrambling often. Add cheese before eggs become firm. </p>
-                 <img src="images/eggsearlyscramble
-                 .jpg" alt="Scrambling Eggs" title="Scrambling Eggs" /></span>
+                 <p>Pour whisked eggs into frying pan. Scramble eggs every 3 seconds. If pan seems too hot, turn down heat. Low heat is best to not burn eggs. Scramble often. Add cheese before eggs become firm. </p>
+                 <img src="images/eggsearlyscramble.jpg" alt="Scrambling Eggs" title="Scrambling Eggs" width="672" height="504"/></span>
          </div>
 
          <div><h2>Learn About Eggs</h2></div>
          <div style="margin:auto; padding:10px">
-             <span style="padding:50px"><iframe width="560" height="315" src="https://www.youtube.com/watch?v=4CFEBU0qnkM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
+             <span style="padding:50px"><iframe width="560" height="315" src="https://www.youtube.com/embed/4CFEBU0qnkM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
          </div>
 
      </body>
