--- a/assignment-10/index.html
+++ b/assignment-10/index.html
@@ -16,7 +16,7 @@
          <p class="content-para">Other times it can be <em>satisfying</em> if things go right.</p>
       </div>
 
-      <div id="tinderbell" src="images/tinkerbell.jpg" width="350px" alt="Tinkerbell" title="tinkerbell">>
+      <div id="tinderbell" src="images/tinkerbell.jpg" width="350px" width="420px" alt="Tinkerbell" title="tinkerbell">>
 
       </div>
 
@@ -34,6 +34,6 @@
 
       </div>
       <div
-        <img id="puppies" src="images/puppies.jpg" width="350px" alt="Pups" title="My puppies" />
+        <img id="puppies" src="images/puppies.jpg" width="350px" height="420px" alt="Pups" title="My puppies" />
       </div>
    </body>
