--- a/assignment-10/index.html
+++ b/assignment-10/index.html
@@ -9,16 +9,16 @@
       <!-- Main Div Container -->
       <div class="main-container">
          <!-- Heading 1 -->
-         <h1 class="main-heading">Working with CSS.</h1>
+         <h1 class="main-heading">Working With CSS.</h1>
 
          <!-- Content Paragraphs -->
          <p class="content-para">Sometimes this work can be <strong>frusterating</strong>.</p>
          <p class="content-para">Other times it can be <em>satisfying</em> if things go right.</p>
       </div>
 
-      <div id="tinderbell" src="images/tinkerbell.jpg" width="350px" width="420px" alt="Tinkerbell" title="tinkerbell">>
-
-      </div>
+      <div
+      <img alt="">id="tinderbell" src="images/tinkerbell.jpg" width="350px" width="420px" alt="Tinkerbell" title="tinkerbell">
+    </div>
 
       <hr />
 
@@ -26,13 +26,14 @@
         <!-- Main Div Container -->
         <div class="main-container">
            <!-- Heading 1 -->
-           <h1 class="main-heading">All about DOGS.</h1>
+           <h1 class="main-heading">All About DOGS.</h1>
 
            <!-- Content Paragraphs -->
            <p class="content-para">Dogs are not just man's best freind, they are <strong>humans</strong> best freiend.</p>
-           <p class="content-para">I really <em>love</em> my black lab puppies so here is a picture of them.</p>
+           <p class="content-para">I really <em>love</em> my black lab puppies so here is a picture of them. They bring so much joy in such a stressful time.</p>
 
       </div>
+
       <div
         <img id="puppies" src="images/puppies.jpg" width="350px" height="420px" alt="Pups" title="My puppies" />
       </div>
