--- a/assignment-10/index.html
+++ b/assignment-10/index.html
@@ -16,11 +16,9 @@
          <p class="content-para">Other times it can be <em>satisfying</em> if things go right.</p>
       </div>
 
-      <div
-      <img alt="">id="tinderbell" src="images/tinkerbell.jpg" width="350px" width="420px" alt="Tinkerbell" title="tinkerbell">
-    </div>
-
       <hr />
+
+
 
       <div class="secondary-container">
         <!-- Main Div Container -->
@@ -34,7 +32,17 @@
 
       </div>
 
-      <div
-        <img id="puppies" src="images/puppies.jpg" width="350px" height="420px" alt="Pups" title="My puppies" />
-      </div>
+  <div class="Photos"> <img id="puppies" src="images/puppies.jpg" width="672px" height="504px" alt="Pups" title="My puppies" /> </div>
+  <div class="Photos"> <img id="tinkerbell" src="images/tinkerbell.jpg" width="672px" height="504px" alt="Tinkerbell" title="Tinkerbell" /> </div>
+  <div class="Photos"> <img id="tinkerbell" src="images/meru.jpg" width="672px" height="504px" alt="Meru" title="meru" /> </div>
+
+  <div class="row">
+      <img src="images/puppies.jpg" alt="Snow" style="width:100%">
+    </div>
+    <div class="row">
+      <img src="/tinkerbell.jpg" alt="Forest" style="width:100%">
+      <div class="row">
+      <img src="images/meru.jpg" alt="Mountains" style="width:50%">
+  </div>
+    </div>
    </body>
