--- a/assignment-10/index.html
+++ b/assignment-10/index.html
@@ -18,8 +18,6 @@
 
       <hr />
 
-
-
       <div class="secondary-container">
         <!-- Main Div Container -->
         <div class="main-container">
@@ -32,17 +30,62 @@
 
       </div>
 
-  <div class="Photos"> <img id="puppies" src="images/puppies.jpg" width="672px" height="504px" alt="Pups" title="My puppies" /> </div>
-  <div class="Photos"> <img id="tinkerbell" src="images/tinkerbell.jpg" width="672px" height="504px" alt="Tinkerbell" title="Tinkerbell" /> </div>
-  <div class="Photos"> <img id="tinkerbell" src="images/meru.jpg" width="672px" height="504px" alt="Meru" title="meru" /> </div>
-
-  <div class="row">
-      <img src="images/puppies.jpg" alt="Snow" style="width:100%">
-    </div>
-    <div class="row">
-      <img src="/tinkerbell.jpg" alt="Forest" style="width:100%">
       <div class="row">
-      <img src="images/meru.jpg" alt="Mountains" style="width:50%">
+        <div class="column">
+          <img src="images/meru.jpg" alt="meru" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="images/puppies.jpg" alt="puppies" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="images/tinkerbell.jpg" alt="tinkerbell" style="width:100%">
+        </div>
+      </div>
+
+      <div class="box-2">
+      A Story About Puppies: These two puppies have saved me during the pandemic. They were born on May 2nd, 2020.
+      I helped deliver them, as their mom had to have a cesarian. It was one of the most stressful experiences of my life.
+      The vet did not have enough staff on hand as it was an emergengy visit at 10:00pm on a saturday night.
+      I helped bring them to life by rubbing their tiny bodies vigorously, while sucking fluid from their nose and mouths.
+      It was a fight to bring each of them to life, as it is usally the job of the mother. There is much more to the story.
+      Long story short, I was albe to raise them from birth and hand pick them from the liter as my own.
+   </div>
+
+
+<div
+   <div class="canvas">
+   <!-- Because of cascading, if I want the sun behind everything, I need to code it before the rainbow on the page. -->
+   <div class="sun"></div>
+
+   <div class="rainbow">
+      <div class="curved red">
+         <h2>I</h2>
+      </div>
+      <div class="curved orange">
+         <h2>LOVE</h2>
+      </div>
+      <div class="curved yellow">
+         <h2>DOGS</h2>
+      </div>
+      <div class="curved green">
+         <h2>THEY</h2>
+      </div>
+      <div class="curved blue">
+         <h2>ARE</h2>
+      </div>
+      <div class="curved indigo">
+         <h2>THE</h2>
+      </div>
+      <div class="curved violet">
+         <h2>BEST</h2>
+      </div>
+   </div>
+
+   <div class="cloud one"></div>
+   <div class="cloud two"></div>
+   <div class="cloud three"></div>
+   <div class="cloud four"></div>
+   <div class="cloud five"></div>
   </div>
-    </div>
+</div>
    </body>
