--- a/assignment-10/index.html
+++ b/assignment-10/index.html
@@ -26,7 +26,7 @@
 
            <!-- Content Paragraphs -->
            <p class="content-para">Dogs are not just man's best freind, they are <strong>humans</strong> best freiend.</p>
-           <p class="content-para">I really <em>love</em> my black lab puppies so here is a picture of them. They bring so much joy in such a stressful time.</p>
+           <p class="content-para">I really <em>love</em> my black lab puppies so here are some pictures of them. They bring so much joy in such a stressful time.</p>
 
       </div>
 
