--- a/assignment-11/index.html
+++ b/assignment-11/index.html
@@ -7,12 +7,54 @@
 
    <body>
      <div class="main-container">
-       <h1>Untamed by Glennon Doyle</h1>
+       <h1 class="main-heading">Untamed by Glennon Doyle</h1>
 
   <h2>New York Times Number 1 Best Seller</h2>
      </div>
 
+<div class="second-container">
+  <h3>The message of Doyle's book? We must untame ourselves and live free from societal confines and ideas about how we should behave in order to bravely find our inner voice. Doyle’s global bestseller is out now, and you can read an excerpt from her book below.</h3>
 
-<p>Like in this box, one common design choice is to pair a sans-serif font for headings with a serif body font (or vice-versus).</p>
+</div>
+<div class="box-2">
 
-<p>This has the effect of visually driving the eye, or making it easier for a reader to visually differentiate sections.</p>
+</div
+<p>Our culture was built upon and benefits from the control of women. The way power justifies controlling a group is by conditioning the masses to believe that the group cannot be trusted. So the campaign to convince us to mistrust women begins early and comes from everywhere.</p>
+
+<p>When we are little girls, our families, teachers and peers insist that our loud voices, bold opinions, and strong feelings are "too much" and unladylike, so we learn to not trust our personalities.</p>
+
+<p>Childhood stories promise us that girls who dare to leave the path or explore get attacked by big bad wolves and pricked by deadly spindles, so we learn to not trust our curiosity.</p>
+
+<p>The beauty industry convinces us that our thighs, frizz, skin, fingernails, lips, eyelashes, leg hair and wrinkles are repulsive and must be covered and manipulated, so we learn to not trust the bodies we live in.</p>
+
+<p>Diet culture promises us that controlling our appetite is the key to our worthiness, so we learn to not trust our own hunger.</p>
+
+<p>Politicians insist that our judgment about our bodies and futures cannot be trusted, so our own reproductive systems must be controlled by lawmakers we don't know in places we've never been.</p>
+
+<p>The legal system proves to us again and again that even our own memories and experiences will not be trusted. If twenty women come forward and say, "He did it," and he says, "No, I didn't," they will believe him while discounting and maligning us every damn time.</p>
+
+<p>And religion, sweet Jesus. The lesson of Adam and Eve -- the first formative story I was told about God and a woman -- was this: When a woman wants more, she defies God, betrays her partner, curses her family and destroys the world.</p>
+
+<p>We weren't born distrusting and fearing ourselves. That was part of our taming. We were taught to believe that who we are in our natural state is bad and dangerous. They convinced us to be afraid of ourselves. So we do not honor our own bodies, curiosity, hunger, judgment, experience or ambition. Instead, we lock away our true selves. Women who are best at this disappearing act earn the highest praise: She is so selfless.</p>
+
+<p>Can you imagine? The epitome of womanhood is to lose one's self completely.</p>
+
+<p>That is the end goal of every patriarchal culture. Because a very effective way to control women is to convince women to control themselves.</p>
+
+<p>I tried to control myself for so long.</p>
+
+<p>I spent thirty years covering and injecting my face with potions and poison trying to fix my skin. Then I quit. And my skin was good.</p>
+
+<p>For twenty years, I was attached to a hair dryer and straightener trying to tame my curls. Then I quit. And my hair was good.</p>
+
+<p>I binged and purged and dieted for decades trying to control my body. When I quit, my body became what it was always meant to become. And it was good, too.</p>
+
+<p>I numbed myself with food and booze trying to control my anger. When I quit, I learned that my anger never meant that there was something wrong with me. It meant that there was something wrong. Out there. Something I might have the power to change. I stopped being a quiet peacekeeper and started being a loud peacemaker. My anger was good.</p>
+
+<p>I had been deceived. The only thing that was ever wrong with me was my belief that there was something wrong with me. I quit spending my life trying to control myself and began to trust myself. We only control what we don't trust. We can either control our selves or love our selves, but we can't do both. Love is the opposite of control. Love demands trust.</p>
+
+<p>I love myself now. Self-love means that I have a relationship with myself built on trust and loyalty. I trust myself to have my own back, so my allegiance is to the voice within. I'll abandon everyone else's expectations of me before I'll abandon myself. I'll disappoint everyone else before I'll disappoint myself. I'll forsake all others before I'll forsake myself. Me and myself: We are till death do us part.</p>
+
+<p>What the world needs is more women who have quit fearing themselves and started trusting themselves.</p>
+
+<p>What the world needs is masses of women who are entirely out of control.</p>
