--- a/assignment-11/index.html
+++ b/assignment-11/index.html
@@ -57,4 +57,4 @@
 
 <p>What the world needs is more women who have quit fearing themselves and started trusting themselves.</p>
 
-<p>What the world needs is masses of women who are entirely out of control.</p>
+<b><p>What the world needs is masses of women who are entirely out of control.</p></b>
