--- a/assignment-11/index.html
+++ b/assignment-11/index.html
@@ -9,7 +9,7 @@
      <div class="main-container">
        <h1 class="main-heading">Untamed by Glennon Doyle</h1>
 
-  <h2>New York Times Number 1 Best Seller</h2>
+  <h2>Author of the #1 New York Times Best Seller</h2>
      </div>
 
 <div class="second-container">
@@ -58,3 +58,10 @@
 <p>What the world needs is more women who have quit fearing themselves and started trusting themselves.</p>
 
 <b><p>What the world needs is masses of women who are entirely out of control.</p></b>
+
+<p>Originally published: March 10, 2020</p>
+<p>Author: Glennon Doyle</p>
+<p>ISBN: 9781785043352</p>
+<p>Genre: Autobiography, Biography</p>
+
+<link rel="stylesheet" href="/css/master.css">
