--- a/assignment-11/index.html
+++ b/assignment-11/index.html
@@ -59,9 +59,23 @@
 
 <b><p>What the world needs is masses of women who are entirely out of control.</p></b>
 
-<p>Originally published: March 10, 2020</p>
-<p>Author: Glennon Doyle</p>
-<p>ISBN: 9781785043352</p>
-<p>Genre: Autobiography, Biography</p>
+<h2>Details</h2>
 
-<link rel="stylesheet" href="/css/master.css">
+<table style="width:100%">
+  <tr>
+    <td>Originally published: March 10, 2020</td>
+    <td>Author: Glennon Doyle</td>
+    <td>ISBN: 9781785043352</td>
+    <td>Genre: Autobiography, Biography</td>
+  </tr>
+</table>
+
+<h4>Read more about Untamed</h4>
+<div class="parent-element">
+   <a href="https://untamedbook.com" target="_blank">
+      <div class="button">
+         Click here for Untamed Book Details...<br />
+         <span style="font-size: small; text-transform:uppercase;"</span>
+      </div>
+   </a>
+</div>
