--- a/assignment-12/index.html
+++ b/assignment-12/index.html
@@ -1,6 +1,17 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Working with CSS</title>
+      <title>assignment-12</title>
       <link rel="stylesheet" type="text/css" href="style.css" />
    </head>
+<body>
+  <div class="parent-container">
+   <div class="inner-box">
+      <h2>Inner Box</h2>
+      <p>Notice, that this box is smaller than its 'parent-container'.</p>
+   </div>
+
+   <h2>Outer Box</h2>
+   <p>Notice, I am larger than the 'inner-box'.</p>
+</div>
+</body>
