--- a/assignment-12/index.html
+++ b/assignment-12/index.html
@@ -2,16 +2,35 @@
    <head>
       <meta charset="utf-8">
       <title>assignment-12</title>
-      <link rel="stylesheet" type="text/css" href="style.css" />
+      <link rel="stylesheet" type="text/css" href="./css/style.css">
+
    </head>
 <body>
   <div class="parent-container">
    <div class="inner-box">
-      <h2>Inner Box</h2>
+      <h2>So Many Boxes</h2>
       <p>Notice, that this box is smaller than its 'parent-container'.</p>
    </div>
 
    <h2>Outer Box</h2>
    <p>Notice, I am larger than the 'inner-box'.</p>
+</div>
+<h2>Overflow: Scroll</h2>
+<div class="parent-container overflow-scroll">
+   <div class="inner-box overflow-scroll">
+      <h3>Inner Scroll Box</h3>
+      <p><i>My content is visible, but contained.</i></p>
+      <p>Amet duis culpa in commodo ut enim incididunt minim consequat laborum dolore nostrud nisi. Nulla enim anim labore enim irure Lorem magna commodo sit amet elit et voluptate tempor enim. Laboris pariatur sunt id ea excepteur deserunt nisi cillum deserunt reprehenderit et deserunt.</p>
+      <p>Adipisicing et exercitation ea voluptate non culpa consequat nisi. Voluptate do nulla nulla deserunt adipisicing sint officia consectetur aliqua duis. Aliquip laboris aute ut consectetur minim officia minim reprehenderit reprehenderit. Ea tempor exercitation sunt mollit id amet minim eiusmod adipisicing cillum quis. Exercitation aliqua excepteur dolore in non consequat exercitation cupidatat sunt. In exercitation sunt duis adipisicing ut incididunt reprehenderit sit ullamco cupidatat ullamco duis exercitation mollit elit velit velit. Cupidatat nulla officia laboris enim velit tempor et eu.</p>
+   </div>
+
+   <h3>Outer Scroll Box</h3>
+   <p><i>My content is visible, but contained.</i></p>
+   <p>Ipsum laborum amet exercitation pariatur tempor ea cupidatat proident duis nostrud. Lorem aliquip veniam eiusmod do laborum ullamco ex id culpa consequat dolore non tempor in excepteur enim aliqua. Dolor commodo officia culpa aliqua nulla sunt non consectetur aute amet culpa nisi aute elit velit commodo dolore. Occaecat laboris et irure labore elit commodo est nisi ut ea sint occaecat aliquip sit fugiat.</p>
+</div>
+
+
+</div>
+
 </div>
 </body>
